# SmsnTelegramNotify

./: .gitignore  README.md  TelegramNotify.py  TelegramNotify.py.backup  config.toml  get_chat_id.py  pyproject.toml  test_send.py  test_threaded_send.py
smsn_telegram/: TelegramNotify.py
smsn_telegram_notify/: TelegramNotify.py
src/telegram_notify/: __init__.py  notify.py
telegram_notify/: __init__.py  notify.py
tests/: conftest.py  test_notify.py
utils/: config_telegram.toml
